# tm-ghci

./: CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.md  Setup.hs  tm-ghci.cabal
doc/: ghci-demo.en.tm  tm-ghci-abstract.en.tm  tm-ghci.en.tm
ghci/: Makefile
ghci/doc/: Help - The GHCi plug-in.tm  ghci-abstract.en.tm  ghci-contact.en.tm  ghci-demo.en.tm  ghci.en.tm
ghci/progs/: init-ghci.scm
ghci/src/: GHCIInterface.hs  GHCiInterface.hs  Interface.hs  hs2tm.hs
progs/: init-ghci.scm  init-tm-ghci.scm
readme-src/: Makefile  README.tex  README.tm
src/: GHCiInterface.hs  Launch.hs  Main.hs  TeXmacsInterface.hs
src-color/: ColorizeHs.hs
src-color/Data/Text/Utils/: Quote.hs
src-color/Data/Vector/Utils/: BinarySearch.hs
src-color/Language/Haskell/Lexer/: BuiltIns.hs  Tokens.hs
src-ghci/: GHCIInterface.hs
