cabal-version:      2.0
name:               tm-ghci
version:            0.2.0.0
synopsis:           A TeXmacs plugin for serious Haskell/GHCi work
homepage:           https://github.com/CubOfJudahsLion/tm-ghci
bug-reports:        mailto:10951848+CubOfJudahsLion@users.noreply.github.com
license-file:       LICENSE
author:             Alexander Feterman Naranjo
maintainer:         10951848+CubOfJudahsLion@users.noreply.github.com
copyright:          (c) 2022-2023 Alexander Feterman Naranjo
category:           Language
build-type:         Simple
tested-with:        GHC == 9.2.7
stability:          experimental
extra-source-files: README.md,
                    haskell.png,
                    texmacs.png,
                    CHANGELOG.md,
                    Makefile

flag debug
  description:  Enable debug support
  default:      False
  manual:       True

executable tm-ghci
  main-is:            Main.hs
  build-depends:      attoparsec,
                      base,
                      conduit,
                      directory,
                      either,
                      filepath,
                      ghc,
                      mtl,
                      process,
                      transformers
  hs-source-dirs:     src
  other-modules :     GitVersion,
                      Launch
  ghc-options:      -j -Wall
  default-language: Haskell2010
  if os(linux)
    ghc-options:    -dynamic -fPIE
  if flag(debug)
    ghc-options:    -DDEBUG -debug -g2 -O0
  else
    ghc-options:    -O2 -g0

