cabal-version:      3.0
name:               tm-ghci
version:            0.2.0.0
synopsis:           A TeXmacs plugin for the Glasgow Haskell Compiler
homepage:           https://github.com/CubOfJudahsLion/tm-ghci
license:            GPL-3.0-only
license-file:       LICENSE
author:             Alexander Feterman Naranjo
maintainer:         10951848+CubOfJudahsLion@users.noreply.github.com
copyright:          2023-2025 Alexander Feterman Naranjo
category:           Plugin
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                  , README.pdf
                  , LICENSE
tested-with:        GHC == 9.2.8
-- extra-source-files:

common warnings
    ghc-options: -Wall

--library
--    import:           warnings
--    exposed-modules:  MyLib
--    other-extensions:
--    build-depends: base >= 4.16.4.0 && < 5
--    hs-source-dirs:   src-lib
--    default-language: Haskell2010

executable GHCIInterface
    import:             warnings
    main-is:            GHCIInterface.hs
    default-extensions: NumericUnderscores
    build-depends:      base >= 4.16.4.0 && < 5
                      , process >= 1.6.16.0
    hs-source-dirs:     src-ghci
    default-language:   Haskell2010
    ghc-options:        -O2 -g0


executable ColorizeHs
   import:              warnings
   main-is:             ColorizeHs.hs
   build-depends:       base >= 4.16.4.0 && < 5
                      , vector
   hs-source-dirs:      src-color
   other-modules:       Language.Haskell.Lexer.BuiltIns
   default-language:    Haskell2010
   other-extensions:    BangPatterns
   ghc-options:         -O2 -g0
               
--test-suite tm-ghci-test
--    import:           warnings
--    default-language: Haskell2010
--    other-modules:
--    other-extensions:
--    type:             exitcode-stdio-1.0
--    hs-source-dirs:   test
--    main-is:          Main.hs
--    build-depends:
--        base >= 4.16.4.0 && < 5
--        tm-ghci

